# university-db

./: CMakeLists.txt  DataBase.cpp  DataBase.hpp  Employee.cpp  Employee.hpp  Person.cpp  Person.hpp  README.md  Student.cpp  Student.hpp  baza.txt  bd.cpp  bd.hpp  db.cpp  db.hpp  main.cpp  menu.cpp  menu.hpp  menu_item.cpp  menu_item.hpp  run  student.cpp  student.hpp  test.cpp
